--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 astroid==2.4.2
 autopep8==1.5.4
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 Flask==1.1.2
+idna==2.10
 isort==5.4.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -17,10 +20,13 @@ pycodestyle==2.6.0
 pylint==2.6.0
 python-dateutil==2.8.1
 pytz==2020.1
+requests==2.24.0
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+urllib3==1.25.10
+waitress==1.4.4
 Werkzeug==1.0.1
 wrapt==1.12.1
 xlrd==1.2.0
