--- a/static/package.json
+++ b/static/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
+    "datatables.net-bs4": "^1.10.22",
+    "datatables.net-buttons-dt": "^1.6.4",
+    "datatables.net-dt": "^1.10.22",
     "jquery": "^3.5.1",
     "startbootstrap-sb-admin-2": "^4.1.1"
   }
